# CPL

./: .clang-format  .gitignore  .gitmodules  .mailmap  CMakeLists.txt  COPYING  LICENSE  README  VERSION.txt  cpl_any.cpp  cpl_any.h  cpl_atomic.cpp  cpl_atomic.h  cpl_byteendian.cpp  cpl_byteendian.h  cpl_datetime.cpp  cpl_datetime.h  cpl_delegate.h  cpl_delegateT.h  cpl_flags.h  cpl_image.cpp  cpl_image.h  cpl_mathhelp.cpp  cpl_mathhelp.h  cpl_memorymanager.cpp  cpl_memorymanager.h  cpl_object.cpp  cpl_object.h  cpl_port.h  cpl_ports.h  cpl_stringhelp.cpp  cpl_stringhelp.h  cpl_version.h.in
cmake/: m2-config.cmake
include/: atomic.h  bigdecimal.h  biginteger.h  bitset.h  bytebuffer.h  byteendian.h  color.h  configuration.h  crthelp.h  cryptographichash.h  datastream.h  datetime.h  delegate.h  delegateT.h  encryption.h  endian.h  error.h  exception.h  filesystem.h  flags.h  globalstatic.h  html.h  http.h  image.h  iot.h  jsonfile.h  library.h  locker.h  logger.h  m2.h  m2_enummaskflag.h  m2_error.h  mathhelp.h  mathvector.h  matrix.h  memorymanager.h  object.h  packagedtask.h  preconfig.h  process.h  (+25 more)
include/help/: bezier.hpp  csv2.hpp  delegate.h  delegateT.h  json.hpp  memorypool.h
include/m2/: m2_allocator.h  m2_bigdecimal.h  m2_biginteger.h  m2_bitset.h  m2_bytebuffer.h  m2_color.h  m2_crthelp.h  m2_cryptographichash.h  m2_datastream.h  m2_datetime.h  m2_delegate.h  m2_delegateT.h  m2_endian.h  m2_enummaskflag.h  m2_error.h  m2_exception.h  m2_filesystem.h  m2_flags.h  m2_globalstatic.h  m2_http.h  m2_image.h  m2_jsonfile.h  m2_library.h  m2_locker.h  m2_logger.h  m2_mathhelp.h  m2_mathvector.h  m2_matrix.h  m2_memorymanager.h  m2_object.h  m2_packagedtask.h  m2_process.h  m2_qrcode.h  m2_random.h  m2_regularexpression.h  m2_serialize.h  m2_shape.h  (+18 more)
m2/: color.cpp  datetime.h  delegate.h  delegateT.h  endian.h  error.cpp  error.h  image.cpp  numericstring.cpp  numericstring.h  random.cpp  stringhelp.h  textconverter.cpp  threadpool.h  value.h
src/: CMakeLists.txt  atomic.cpp  byteendian.cpp  classfactory.cpp  crthelp.cpp  datetime.cpp  error.cpp  exception_p.h  library.cpp  logger.cpp  m2_classfactory.cpp  m2_crashreport.cpp  m2_endian.cpp  m2_error.cpp  m2_object.cpp  m2_sharedmemory.cpp  m2_stacktrace.cpp  m2_stlhelp.cpp  m2_variant.cpp  memorymanager.cpp  object.cpp  sharedmemory.cpp  sharedmemoryhandle.cpp  sharedmemoryhandle.h  stlhelp.cpp  stringhelp.cpp  tinyxml2.cpp  variant.cpp
src/byte/: bitset.cpp  bytebuffer.cpp  classfactory.cpp  endian.cpp  library.cpp  object.cpp  sharedmemory.cpp  sharedmemoryhandle.cpp  sharedmemoryhandle.h  stlhelp.cpp
src/configuration/: jsonserializestream.h  serialize.cpp  xmlserializestream.h
src/datetime/: clock.cpp  datetime.cpp  deallinetimer.cpp  timespan.cpp  timestamp.cpp  timezone.cpp
src/encryption/: cryptographichash.cpp
src/encryption/rfc6234/: sha224-256.c
src/filesystem/: dir.cpp  file.cpp
src/html/: htmldocument.cpp
src/html/gumbo/: attribute.c
src/http/: url.cpp
src/image/: bmpimageio.cpp  color.cpp  image.cpp  m2_bezier.cpp  m2_circle.cpp  m2_color.cpp  m2_colorramp.cpp  m2_ellipse.cpp  m2_imageiohandler.h  m2_line.cpp  m2_margins.cpp  m2_pagesize.cpp  m2_point.cpp  m2_polygon.cpp  m2_rbtree.cpp  m2_rect.cpp  m2_regularpolygon.cpp  m2_size.cpp  m2_triangle.cpp  rect.cpp  size.cpp
src/io/: m2_buffer.cpp  m2_bytearray.cpp  m2_datastream.cpp  m2_fileinputstream.cpp  m2_filesystem.cpp  m2_iodevice.cpp  m2_logger.cpp  m2_operatorsystemenvironment.cpp  m2_sharedmemoryhandle.h
src/json/: jsonfile.cpp  m2_jsonfile.cpp  m2_jsonheader.h
src/math/: bigdecimal.cpp  biginteger.cpp  cryptographichash.cpp  m2_bigdecimal.cpp  m2_biginteger.cpp  m2_cryptographichash.cpp  m2_geometrymath.cpp  m2_math.cpp  m2_random.cpp  m2_statisticalsummary.cpp  m2_transform.cpp  m2_unitsconvertor.cpp  m2_uuid.cpp  m2_vector.cpp  mathvector.cpp  random.cpp  sine_table.cpp  unitarea.cpp  unitlength.cpp  unitvolume.cpp  uuid.cpp
src/math/encryption/rfc6234/: sha384-512.c
src/math/encryption/sha1/: sha1.cpp
src/math/encryption/sha3/: KeccakF-1600-interface.h  KeccakF-1600-opt64.c  KeccakSponge.c
src/math/md4/: md4.cpp  md4.h
src/math/md5/: md5.cpp  md5.h
src/math/rfc6234/: sha.h
src/math/sha3/: KeccakNISTInterface.c
src/memorymanager/: bitset.cpp  bytebuffer.cpp  bytebufferstream.cpp  filesystem.cpp  inputstream.cpp  operatorsystemenvironment.cpp  outputstream.cpp
src/sql/: m2_sqldatabase.cpp  m2_sqldriver.h  m2_sqlfield.cpp  m2_sqlstatement.cpp  sqlfield.cpp  sqlstatement.cpp
src/sql/sqldrivers/pg/: m2_pgdriver.h
src/sql/sqldrivers/sqlite/: m2_sqlitedriver.h
src/sql/sqlite/: sqlitehelp.cpp
src/stream/: bytebufferstream.cpp  cborserializestream.h  dir.cpp  file.cpp  fileinputstream.cpp  filesystem.cpp  inputstream.cpp  memoryoutputstream.cpp  operatorsystemenvironment.cpp  serialize.cpp  xmlserializestream.h
src/stringhelp/: ascii.cpp  numericstring.cpp  numericstring.h  regularexpression.cpp  string.cpp  stringlist.cpp  stringstream.cpp  stringtokenizer.cpp  textconverter.cpp  wstring.cpp
src/text/: ascii.cpp  m2_ascii.cpp  m2_numericstring.h  m2_regularexpression.cpp  m2_string.cpp  m2_stringlist.cpp  m2_stringtokenizer.cpp  m2_wstring.cpp  numericstring.cpp  numericstring.h  regularexpression.cpp  string.cpp  stringlist.cpp  stringstream.cpp  stringtokenizer.cpp  textconverter.cpp  wstring.cpp
src/thread/: condition.cpp  m2_condition.cpp  m2_pipe.cpp  m2_pipehandle.h  m2_process.cpp  m2_processhandle.h  m2_semaphore.cpp  m2_thread.cpp  m2_waitevent.cpp  m2_waitevent.h  mutex.cpp  pipe.cpp  pipehandle.h  process.cpp  processhandle.cpp  processhandle.h  rwlock.cpp  semaphore.cpp  waitevent.cpp  waitevent.h  workthread.cpp
src/tm/: clock.cpp  datetime.cpp  deallinetimer.cpp  elapsedtimer.cpp  m2_clock.cpp  m2_datetime.cpp  m2_elapsedtimer.cpp  m2_timer.cpp  m2_timestamp.cpp  math_traits.h  timer.cpp  timespan.cpp  timestamp.cpp  timezone.cpp
src/trace/: crashreport.cpp  error.cpp  stacktrace.cpp
tests/: AtomicTest.cpp  CMakeLists.txt  DateTimeTest.cpp  FlagTest.cpp  StringTest.cpp
(+94 files in other folders)
